; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/error/extr_elog.c_EmitErrorReport.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/error/extr_elog.c_EmitErrorReport.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i64, i64, i32 }

@errordata = common dso_local global %struct.TYPE_7__* null, align 8
@errordata_stack_depth = common dso_local global i64 0, align 8
@recursion_depth = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @EmitErrorReport() #0 {
  %1 = alloca %struct.TYPE_7__*, align 8
  %2 = alloca i32, align 4
  %3 = load %struct.TYPE_7__*, %struct.TYPE_7__** @errordata, align 8
  %4 = load i64, i64* @errordata_stack_depth, align 8
  %5 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %3, i64 %4
  store %struct.TYPE_7__* %5, %struct.TYPE_7__** %1, align 8
  %6 = load i32, i32* @recursion_depth, align 4
  %7 = add nsw i32 %6, 1
  store i32 %7, i32* @recursion_depth, align 4
  %8 = call i32 (...) @CHECK_STACK_DEPTH()
  %9 = load %struct.TYPE_7__*, %struct.TYPE_7__** %1, align 8
  %10 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %9, i32 0, i32 2
  %11 = load i32, i32* %10, align 8
  %12 = call i32 @MemoryContextSwitchTo(i32 %11)
  store i32 %12, i32* %2, align 4
  %13 = load %struct.TYPE_7__*, %struct.TYPE_7__** %1, align 8
  %14 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %13, i32 0, i32 1
  %15 = load i64, i64* %14, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %21

17:                                               ; preds = %0
  br i1 true, label %18, label %21

18:                                               ; preds = %17
  %19 = load %struct.TYPE_7__*, %struct.TYPE_7__** %1, align 8
  %20 = call i32 @emit_log_hook(%struct.TYPE_7__* %19)
  br label %21

21:                                               ; preds = %18, %17, %0
  %22 = load %struct.TYPE_7__*, %struct.TYPE_7__** %1, align 8
  %23 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %22, i32 0, i32 1
  %24 = load i64, i64* %23, align 8
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %29

26:                                               ; preds = %21
  %27 = load %struct.TYPE_7__*, %struct.TYPE_7__** %1, align 8
  %28 = call i32 @send_message_to_server_log(%struct.TYPE_7__* %27)
  br label %29

29:                                               ; preds = %26, %21
  %30 = load %struct.TYPE_7__*, %struct.TYPE_7__** %1, align 8
  %31 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %30, i32 0, i32 0
  %32 = load i64, i64* %31, align 8
  %33 = icmp ne i64 %32, 0
  br i1 %33, label %34, label %37

34:                                               ; preds = %29
  %35 = load %struct.TYPE_7__*, %struct.TYPE_7__** %1, align 8
  %36 = call i32 @send_message_to_frontend(%struct.TYPE_7__* %35)
  br label %37

37:                                               ; preds = %34, %29
  %38 = load i32, i32* %2, align 4
  %39 = call i32 @MemoryContextSwitchTo(i32 %38)
  %40 = load i32, i32* @recursion_depth, align 4
  %41 = add nsw i32 %40, -1
  store i32 %41, i32* @recursion_depth, align 4
  ret void
}

declare dso_local i32 @CHECK_STACK_DEPTH(...) #1

declare dso_local i32 @MemoryContextSwitchTo(i32) #1

declare dso_local i32 @emit_log_hook(%struct.TYPE_7__*) #1

declare dso_local i32 @send_message_to_server_log(%struct.TYPE_7__*) #1

declare dso_local i32 @send_message_to_frontend(%struct.TYPE_7__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
